# sqlite-zstd

./: .gitignore  Cargo.toml  README.md  test.sh
.cargo/: config.toml
.github/workflows/: cicd.yml  pypi_release.yml
python/: README.md  pyproject.toml  setup.py
python/lib/: __init__.py  datasette.py
src/: add_functions.rs  basic.rs  create_extension.rs  dict_management.rs  dict_training.rs  lib.rs  transparent.rs  util.rs  zstd_fns.rs
