[package]
name = "sqlite-zstd"
version = "0.1.3-alpha.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"
description = "Extension for sqlite that provides transparent dictionary-based row-level compression for sqlite"
repository = "https://github.com/phiresky/sqlite-zstd"
license = "LGPL-2.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

build_extension = ["rusqlite/loadable_extension"]

# debug_zstd = ["zstd/debug"]

benchmark = ["structopt", "procfs", "rusqlite/backup", "rusqlite/load_extension"]

all = ["benchmark"]

[[bin]]
name = "benchmark"
required-features = ["benchmark"]

[[bin]]
name = "test-zstd-bug"
required-features = ["benchmark"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zstd = {version = "0.6.0", git="https://github.com/phiresky/zstd-rs", branch="master"}
zstd-safe = {version = "3.0.0", git="https://github.com/phiresky/zstd-rs", branch="master" }
#zstd = {version = "0.5.3", path="../zstd-rs"}
#zstd = {version = "=0.5.4"}
anyhow = "1.0.44"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }

owning_ref = "0.4.1"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
lru_time_cache = "0.11.11"
structopt = { version = "0.3.23", optional = true }
procfs = { version = "0.10.1", optional = true }

[dependencies.rusqlite]
package = "rusqlite-le"
version = "0.24.2"
features = ["functions", "blob", "bundled", "array"]

[dev-dependencies]
chrono = "0.4.19"
names = "0.12.0"
pretty_assertions = "0.7.2"


[profile.release]
lto = true
