[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
description = "Extension for sqlite that provides transparent dictionary-based row-level compression for sqlite"
edition = "2018"
license = "LGPL-2.0-or-later"
name = "sqlite-zstd"
repository = "https://github.com/phiresky/sqlite-zstd"
version = "0.3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

build_extension = ["rusqlite/loadable_extension"]

# debug_zstd = ["zstd/debug"]

benchmark = ["structopt", "procfs", "rusqlite/backup", "rusqlite/load_extension"]

all = ["benchmark"]

[[bin]]
name = "benchmark"
required-features = ["benchmark"]

[[bin]]
name = "test-zstd-bug"
required-features = ["benchmark"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zstd = {version = "0.11.2", features = ["experimental"]}
#zstd = {version = "0.5.3", path="../zstd-rs"}
#zstd = {version = "=0.5.4"}
anyhow = "1.0.44"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
lru_time_cache = "0.11.11"
owning_ref = "0.4.1"
procfs = {version = "0.13.2", optional = true}
rand = "0.8.4"
structopt = {version = "0.3.23", optional = true}

[dependencies.rusqlite]
features = ["functions", "blob", "bundled", "array"]
package = "rusqlite-le"
version = "0.24.2"

[dev-dependencies]
chrono = "0.4.19"
names = "0.14.0"
pretty_assertions = "1.2.1"

[profile.release]
lto = "fat"
