[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
description = "Extension for sqlite that provides transparent dictionary-based row-level compression for sqlite"
edition = "2018"
license = "LGPL-2.0-or-later"
name = "sqlite-zstd"
repository = "https://github.com/phiresky/sqlite-zstd"
version = "0.3.2"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

build_extension = ["rusqlite/loadable_extension"]

# debug_zstd = ["zstd/debug"]

benchmark = ["structopt", "procfs", "rusqlite/backup", "rusqlite/load_extension", "csv"]

all = ["benchmark"]

[[bin]]
name = "benchmark"
required-features = ["benchmark"]

[[bin]]
name = "create_test_db"
required-features = ["benchmark"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zstd = {version = "0.11.2", features = ["experimental"]}
#zstd = {version = "0.5.3", path="../zstd-rs"}
#zstd = {version = "=0.5.4"}
anyhow = "1.0.44"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"

csv = {version = "1.1.6", optional = true}
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
lru_time_cache = "0.11.11"
owning_ref = "0.4.1"
procfs = {version = "0.13.2", optional = true}
rand = "0.8.4"
structopt = {version = "0.3.23", optional = true}

[dependencies.rusqlite]
features = ["functions", "blob", "bundled", "array"]
package = "rusqlite-le"
version = "0.24.2"

[dev-dependencies]
chrono = "0.4.19"
names = "0.14.0"
pretty_assertions = "1.2.1"

[profile.release]
lto = "fat"

# cargo-deb configuration
# https://github.com/kornelski/cargo-deb
[package.metadata.deb]
# Debianized package name, conveniently matches the name of the shared library file
name = "libsqlite-zstd"
# $auto fills in the automatically calculated dependencies (namely libc)
# libsqlite3-0 is added because this library isn't very useful without SQLite
depends = "$auto, libsqlite3-0"
# This feature is required to build the shared library extension
features = ["build_extension"]
assets = [
    # Install the shared library extension to /usr/lib, where SQLite can find it
    ["target/release/libsqlite_zstd.so", "usr/lib/", "744"],
    # It's good practice to install the README file into /usr/share/doc for every package
    ["README.md", "usr/share/doc/libsqlite-zstd/README", "644"],
]
